--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.15.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
